--- a/po/bg.po
+++ b/po/bg.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 14:40+0200\n"
-"PO-Revision-Date: 2011-06-20 19:13+0200\n"
-"Last-Translator: Радослав <Rec.ku@hotmail.com>\n"
+"PO-Revision-Date: 2012-09-30 11:38+0200\n"
+"Last-Translator: Радослав <reckku@gmail.com>\n"
 "Language: bg\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -29,9 +29,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>Вид на файла за отваряне:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "Инсталирано приложение"
+msgstr "_Инсталирано приложение"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -42,9 +41,8 @@ msgid "_Browse"
 msgstr "_Намери"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "Изпълни в терминала"
+msgstr "_Изпълни в терминала"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -62,14 +60,12 @@ msgstr ""
 "<b>%U</b>: Представя няколко URL-та"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "Потребителска команда"
+msgstr "_Потребителска команда"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "Задай маркираното приложение по подразбиране за този вид файл"
+msgstr "_Задай маркираното приложение по подразбиране за този вид файл"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -103,14 +99,12 @@ msgid "with the following file?"
 msgstr "с този файл?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "Име на файл:"
+msgstr "Име на _файл:"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "Приложи тази опция до всички съществуващи файлове"
+msgstr "_Приложи тази опция до всички съществуващи файлове"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -157,54 +151,49 @@ msgid "_General"
 msgstr "_Общи"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>Собственик:</b>"
+msgstr "<b>С_обственик:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>Група:</b>"
+msgstr "<b>_Група:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>Mail клиент</b>"
+msgstr "<b>П_реглед на съдържание:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>Обект:</b>"
+msgstr "<b>_Промяна на съдържание:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>Други:</b>"
+msgstr "<b>_Изпълни:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 #, fuzzy
 msgid "<b>Special bits:</b>"
-msgstr "<b>Отвори _с:</b>"
+msgstr "<b>Специални условия:</b>"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "Who can read content of the file/directory"
-msgstr ""
+msgstr "Който може да чете съдържанието на файловете/директориите"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Who can change content of the file/directory"
-msgstr ""
+msgstr "Който може да променя съдържанието на файловете/директориите"
 
 #: ../data/ui/file-prop.glade.h:20
 msgid "Who can execute the file or enter the directory"
-msgstr ""
+msgstr "Който може да изпълнява файлове и да отваря директории"
 
 #: ../data/ui/file-prop.glade.h:21
 msgid "Special flags for file execution"
-msgstr ""
+msgstr "Специални правила за изпълнение"
 
 #: ../data/ui/file-prop.glade.h:22
 msgid "Special flags for directory access"
-msgstr ""
+msgstr "Специални правила за достъп до директория"
 
 #: ../data/ui/file-prop.glade.h:23
 msgid "<b>Access Control</b>"
