--- a/po/hr.po
+++ b/po/hr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 14:40+0200\n"
-"PO-Revision-Date: 2012-09-06 18:56+0200\n"
+"PO-Revision-Date: 2012-10-01 01:23+0200\n"
 "Last-Translator: zvacet <ikoli@yahoo.com>\n"
 "Language: hr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 
 #: ../data/ui/app-chooser.glade.h:1
@@ -27,9 +27,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>Tip datoteke koji će biti otvoren:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "Instalirani program"
+msgstr "_Instalirani program"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -40,9 +39,8 @@ msgid "_Browse"
 msgstr "_Pregledaj"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "Izvršite u emulatoru terminala"
+msgstr "_Izvršite u emulatoru terminala"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -60,14 +58,12 @@ msgstr ""
 "  <b>%U</b>: predstavljaju višestruke URI-je"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "Prilagođeni naredbeni redak"
+msgstr "_Prilagođeni naredbeni redak"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "Postavi odabrani program kao zadanu akciju za ovaj tip datoteka"
+msgstr "_Postavi odabrani program kao zadanu akciju za ovaj tip datoteka"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -101,14 +97,12 @@ msgid "with the following file?"
 msgstr "sa slijedećom datotekom?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "Ime datoteke:"
+msgstr "_Ime datoteke:"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "Primjeni ovu opciju na sve postojeće datoteke"
+msgstr "_Primjeni ovu opciju na sve postojeće datoteke"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -155,29 +149,24 @@ msgid "_General"
 msgstr "_Osnovno"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>_Vlasnikr:</b>"
+msgstr "<b>V_lasnik:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>Grupa:</b>"
+msgstr "<b>G_rupa:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>Pogledaj sadržaj:</b>"
+msgstr "<b>_Pogledaj sadržaj:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>Promjeni sadržaj:</b>"
+msgstr "<b>P_romjeni sadržaj:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>Izvrši:</b>"
+msgstr "<b>_Izvrši:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -292,7 +281,7 @@ msgstr "<b>Web preglednik</b>"
 
 #: ../data/ui/preferred-apps.glade.h:3
 msgid "The preferred Web Browser will be used to open hyperlinks."
-msgstr "Biti će korišten željeni Web preglednik za otvaranje hiperpoveznica"
+msgstr "Biti će korišten željeni Web preglednik za otvaranje hiperpoveznica."
 
 #: ../data/ui/preferred-apps.glade.h:4
 msgid "<b>Mail client</b>"
@@ -355,18 +344,16 @@ msgid "Choose a date from the following calendar"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:7
-#, fuzzy
 msgid "Search Files"
-msgstr "_Posloži datoteke"
+msgstr "Traži datoteke"
 
 #: ../data/ui/filesearch.glade.h:8
-#, fuzzy
 msgid "<b>File _Name Patterns</b>"
-msgstr "<b>Tip datoteke:</b>"
+msgstr ""
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -393,56 +380,48 @@ msgid "Name/_Location"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>Tip datoteke:</b>"
+msgstr "<b>Tip datoteke</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:18
-#, fuzzy
 msgid "Te_xt files"
-msgstr "Brisanje datoteka"
+msgstr "Te_kstualne datoteke"
 
 #: ../data/ui/filesearch.glade.h:19
-#, fuzzy
 msgid "_Image files"
-msgstr "Bacanje datoteka u smeće"
+msgstr "_Slikovne datoteke"
 
 #: ../data/ui/filesearch.glade.h:20
-#, fuzzy
 msgid "_Audio files"
-msgstr "_Posloži datoteke"
+msgstr "_Audio datoteke"
 
 #: ../data/ui/filesearch.glade.h:21
-#, fuzzy
 msgid "_Video files"
-msgstr "_Posloži datoteke"
+msgstr "_Video datoteke"
 
 #: ../data/ui/filesearch.glade.h:22
 msgid "_Documents"
-msgstr ""
+msgstr "_Dokumenti"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "File _Type"
-msgstr "Po tipu _datoteke"
+msgstr "Vrsta _datoteke"
 
 #: ../data/ui/filesearch.glade.h:24
-#, fuzzy
 msgid "<b>File Contain_s</b>"
-msgstr "<b>Veličina na disku:</b>"
+msgstr ""
 
 #: ../data/ui/filesearch.glade.h:25
 msgid "C_ontent"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:26
-#, fuzzy
 msgid "<b>File Size</b>"
-msgstr "<b>Tip datoteke:</b>"
+msgstr "<b>Veličina datoteke</b>"
 
 #: ../data/ui/filesearch.glade.h:27
 msgid "_Smaller than:"
@@ -453,15 +432,13 @@ msgid "_Bigger than:"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:29
-#, fuzzy
 msgid "<b>Last Modified Time</b>"
-msgstr "<b>Zadnja promjena:</b>"
+msgstr "<b>Zadnja promjena</b>"
 
 #: ../data/ui/filesearch.glade.h:30 ../src/gtk/fm-gtk-file-launcher.c:529
 #: ../src/gtk/fm-gtk-file-launcher.c:536
-#, fuzzy
 msgid "(None)"
-msgstr "Nijedan"
+msgstr "(Nijedan)"
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Earlier than:"
@@ -472,9 +449,8 @@ msgid "L_ater than:"
 msgstr ""
 
 #: ../data/ui/filesearch.glade.h:33
-#, fuzzy
 msgid "_Properties"
-msgstr "Svojstva datoteke"
+msgstr "_Svojstva"
 
 #: ../src/base/fm-utils.c:80 ../src/base/fm-utils.c:111
 #, c-format
@@ -625,9 +601,8 @@ msgstr ""
 "Želite li rekurzivno primjeniti ova promjene na sve datoteke i podmape?"
 
 #: ../src/gtk/fm-file-properties.c:633
-#, fuzzy
 msgid "<b>_Access content:</b>"
-msgstr "<b>Sadržaj pristupa:</b>"
+msgstr "<b>_Sadržaj pristupa:</b>"
 
 #: ../src/gtk/fm-file-properties.c:748
 msgid "Files of different types"
@@ -646,34 +621,28 @@ msgid "Applications"
 msgstr "Programi"
 
 #: ../src/gtk/fm-places-view.c:101
-#, fuzzy
 msgid "_Mount Volume"
-msgstr "Montiraj uređaj"
+msgstr ""
 
 #: ../src/gtk/fm-places-view.c:102
-#, fuzzy
 msgid "_Unmount Volume"
-msgstr "Demontiraj uređaj"
+msgstr ""
 
 #: ../src/gtk/fm-places-view.c:103
-#, fuzzy
 msgid "_Eject Removable Media"
-msgstr "Izbaci uklonjivi medij"
+msgstr "_Izbaci uklonjivi medij"
 
 #: ../src/gtk/fm-places-view.c:116
-#, fuzzy
 msgid "_Rename Bookmark Item"
-msgstr "Preimenuj stavku zabilješke"
+msgstr "_Preimenuj stavku zabilješke"
 
 #: ../src/gtk/fm-places-view.c:117
-#, fuzzy
 msgid "Re_move from Bookmark"
-msgstr "Ukloni iz zabilješki"
+msgstr "Uklo_ni iz zabilješki"
 
 #: ../src/gtk/fm-places-view.c:129
-#, fuzzy
 msgid "_Empty Trash Can"
-msgstr "Isprazni smeće"
+msgstr "_Isprazni smeće"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:868
@@ -689,19 +658,16 @@ msgid "_Off"
 msgstr ""
 
 #: ../src/gtk/fm-side-pane.c:62
-#, fuzzy
 msgid "_Places"
-msgstr "Mjesta"
+msgstr "_Mjesta"
 
 #: ../src/gtk/fm-side-pane.c:63
-#, fuzzy
 msgid "_Directory Tree"
-msgstr "Stablo direktorija"
+msgstr "_Stablo direktorija"
 
 #: ../src/gtk/fm-side-pane.c:64
-#, fuzzy
 msgid "_Remote"
-msgstr "Udaljeno"
+msgstr "_Udaljeno"
 
 #: ../src/gtk/fm-side-pane.c:412
 msgid "Places"
@@ -713,43 +679,36 @@ msgstr "Stablo direktorija"
 
 #: ../src/gtk/fm-file-menu.c:156
 msgid "_Open"
-msgstr ""
+msgstr "_Otvori"
 
 #: ../src/gtk/fm-file-menu.c:157 ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Open _With..."
-msgstr "Otvori pomoću..."
+msgstr "Otvori _pomoću..."
 
 #: ../src/gtk/fm-file-menu.c:164
-#, fuzzy
 msgid "Create _Symlink"
-msgstr "Napravi simboličku poveznicu"
+msgstr "Napravi _simboličku poveznicu"
 
 #: ../src/gtk/fm-file-menu.c:165
-#, fuzzy
 msgid "Se_nd To"
-msgstr "Pošalji za"
+msgstr "Po_šalji za"
 
 #: ../src/gtk/fm-file-menu.c:166
-#, fuzzy
 msgid "Co_mpress..."
-msgstr "Komprimiraj..."
+msgstr "Ko_mprimiraj..."
 
 #: ../src/gtk/fm-file-menu.c:167
-#, fuzzy
 msgid "Extract _Here"
-msgstr "Raspakiraj ovdje"
+msgstr "Raspakiraj _ovdje"
 
 #: ../src/gtk/fm-file-menu.c:168
-#, fuzzy
 msgid "E_xtract To..."
-msgstr "Raspakiraj u..."
+msgstr "R_aspakiraj u..."
 
 #: ../src/gtk/fm-file-menu.c:169 ../src/gtk/fm-folder-view.c:186
 #: ../src/gtk/fm-folder-view.c:187
-#, fuzzy
 msgid "Prop_erties"
-msgstr "Svojstva datoteke"
+msgstr "Svoj_stva"
 
 #: ../src/gtk/fm-file-menu.c:473
 msgid "_Restore"
@@ -820,9 +779,8 @@ msgid "Show _Hidden"
 msgstr "Pokaži _skrivene"
 
 #: ../src/gtk/fm-folder-view.c:197
-#, fuzzy
 msgid "_Only for this folder"
-msgstr "Samo za ovu mapu"
+msgstr "_Samo za ovu mapu"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Check to remember sort as folder setting rather than global one"
@@ -940,7 +898,6 @@ msgid "No folders are specified."
 msgstr ""
 
 #: ../src/gtk/fm-gtk-file-launcher.c:603
-#, fuzzy
 msgid "Select a folder"
 msgstr "Odaberite mapu"
 
