[#3575354]Fixed incorrect usage of g_main_current_source() in clear_src_cache().
Clear_src_cache() used both as idle callback and non-idle function.
Since idle callback should test if source was deleted that makes such usage invalid.

--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,9 @@ Changes on 1.0.2 since 1.0.1:
 * Added search engine. Supports search:// URIs and has the UI represented
     by API fm_launch_search_simple().
 
+* Full name in Icon View mode now shown in tooltip while long names are
+    placed under icons in truncated form.
+
 
 Changes on 1.0.1 since 1.0.0:
 
